# elemental

./: Cargo.toml  README.md  test.elt
src/: error.rs  expression.rs  lib.rs  main.rs  matrix.rs
src/parser/: assignment_parselet.rs  binop_parselet.rs  func_parselet.rs  identifier_parselet.rs  literal_parselet.rs  matrix_parselet.rs  mod.rs  paren_parselet.rs  prime_parselet.rs
src/standard/: cos.rs  cross.rs  determinant.rs  dot.rs  exit.rs  get_minors.rs  identity.rs  invert.rs  linspace.rs  mod.rs  plot.rs  rotation.rs  routh.rs  sin.rs  sqrt.rs  transpose.rs
src/tokenizer/: mod.rs
