[package]
name = "eltl"
description = "An engineer's calculator.  Written in Rust."
repository = "https://github.com/hobbsbros/elemental"
license = "MIT"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "eltl"
path = "src/main.rs"

[lib]
name = "elemental"
path = "src/lib.rs"

[dependencies]
colored = "2.0.0"
